css/styles.css
/* ... */
.preload * {
    transition: none !important;
}

* {
    box-sizing: border-box;
}

::selection {
    background-color: rgba(126,97,229,1);
    color: rgba(255,255,255,1);
}

html, body {
    height: 94%;
}

body {
    margin: 0;
    font-family: 'Lato', sans-serif;
    color: #000000;
    font-size: 100%;
    -webkit-text-size-adjust: none;
    -webkit-font-smoothing: antialiased;
    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
    background-color: rgba(255, 255, 255, 1);
    box-sizing: border-box;
}

hr {
    width: 100%;
    max-width: 100%;
    min-width: 0%;
    display: block;
    height: 0.01%;
    border: 0;
    border-top: 1px solid rgba(0, 0, 0, 0.2);
    margin: 0;
    padding: 0;
    user-select: none;
}

a {
    text-decoration: none;
    color: rgba(126,97,229,1);
}
a:hover, a:focus {
    text-decoration: underline;
}

.shell_loader {
    display: none;
    background-color: rgba(126,97,229, 1);
    opacity: 1;
    position: fixed;
    top: 0;
    left: 0;
    height: 110%;
    width: 100%;
    user-select: none;
    z-index: 99999999;
    transition: all 0.5s !important;
}
.shell_loader_fadeaway {
    opacity: 0;
}
.shell_loader_con {
    transform: translate(0,330%);
    transition: all 0.3s !important;
    font-size: 100%;
}
.shell_loader_con_expand {
    font-size: 140%;
}
.shell_loader_logo {
    font-size: 260%;
    text-align: center;
    margin-left: auto;
    margin-right:auto;
}
.shell_loader_text {
    color: #000;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    font-size: 140%;
}

.header {
    background-color: rgba(126,97,229,1);
    color: #fff;
    width: 100%;
    user-select: none;
}
.main-logo {
    height: 25px;
    width: 35px;
    vertical-align: -5px;
}
.title {
    display: inline-block;
    font-size: 140%;
    padding: 18px;
    padding-left: 0px;
    vertical-align: middle;
    font-weight: bold;
}

.loading {
	opacity: 0;
	color: #fff;
	font-size: 280%;
    font-weight: bold;
    position: absolute;
    top: -5px;
    right: 30px;
    transition: all 0.1s !important;
    z-index: 12;

}
.loading_s {
	opacity: 1;
}

.menuwrapper {
    display: inline-block;
    padding-left: 25px;
    height: 63px;
    width: 70px;
    vertical-align: middle;
    background-color: rgba(0,0,0,0);
}
.menuicon {
    position: absolute;
    top: 16px;
    left: 35px;
    display: inline-block;
    box-shadow: 0 9px 0 2px white,0 16px 0 2px white,0 23px 0 2px white;
    z-index: 11;
}
.menutoggle {
    position: absolute;
    top: 12px;
    left: 15px;
    background-color: rgba(0, 0, 0, 0);
    display: inline-block;
    height: 40px;
    width: 40px;
    border: solid 0px;
    border-radius: 40px;
    z-index: 10;
    cursor: pointer;
    transition: all 0.2s !important;
}
.menutoggle:focus, .menutoggle:hover {
    outline: none;
    background-color: rgba(0, 0, 0, 0.08);
}
.menutogglelock {
    background-color: rgba(0, 0, 0, 0.08);
}
.menulist {
    background-color: rgba(255, 255, 255, 1);
    transform: translate3d(0, 0, 0);
    width: 20%;
    height: 100%;
    max-height: 100%;
    position: fixed;
    top: 0px;
    left: -50%;
    text-align: center;
    margin-top: 0px;
    margin-right: 0px;
    border-color: rgba(0,0,0,0.1);
    z-index: 999;
    transition: all 0.5s !important;
}
.menu_show {
    left: 0% !important;
}
.menuoption {
    text-align: left;
    padding-top: 20px;
    padding-bottom: 20px;
    padding-left: 30px;
    width: 100%;
    font-size: 95%;
    transition: none;
    transform: none;
}
.menuoption:focus {
    background-color: rgba(126,97,229,0.2);
    outline: none;
}
.menuheader {
    position: relative;
    background-color: rgba(255, 255, 255, 1);
    color: rgba(0, 0, 0, 0.5);
    width: 100%;
    margin-bottom: 20px;
    user-select: none;
    transition: none;
    transform: none;
}
.menuheadercontent {
    position: absolute;
    bottom: 0;
    width: 100%;
    padding-top: 10px;
    padding-bottom: 10px;
    background-color: rgba(0, 0, 0, 0.2);
    color: rgba(255, 255, 255, 1);
    transition: none;
    transform: none;
}
.menu_selection {
    background-color: rgba(0, 0, 0, 0.2);
}
.menufooter {
	color: rgba(0, 0, 0, 0.8);
    padding-top: 15px;
    padding-bottom: 15px;
    width: 100%;
    text-align: center;
    position: absolute;
    bottom: 0;
    border-top: solid 1px;
    border-color: rgba(0, 0, 0, 0.2);
}
.menufooter a {
	color: rgba(0, 0, 0, 0.8);
	text-decoration: none;
}

.action {
    position: relative;
    overflow: hidden;
    cursor: pointer;
    background-color: rgba(255, 142, 25, 0);
    user-select: none;
}

.ink {
	display: block; position: absolute;
	background: rgba(126,97,229,0.4);
	border-radius: 100%;
	transform: scale(0);
}

.ink.animate {
    animation: ripple 0.30s linear;
}
@keyframes ripple {
	100% {
        opacity: 0; transform: scale(2.5);
    }
}

.zoneblock {
    padding-top: 10px;
    margin-left: auto;
    margin-right: auto;
    background-color: #ffffff;
    min-height: 95%;
    width: 100%;
    min-width: 100%;
}

.alert {
    display: none;
    background-color: rgba(126,97,229,1);
    color: #ffffff;
    border: solid 0px;
    border-radius: 3px;
    width: 30%;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    padding: 3px;
}

.coverarea {
    display: none;
    position: fixed;
    top: 0;
    transition: all 0.1s !important;
    width: 120%;
    height: 120%;
    background-color: rgba(0, 0, 0, 0);
    z-index: 99;
    transform: translate3d(0, 0, 0);
}
.coverareaa {
    background-color: rgba(0, 0, 0, 0.4);
}
.show {
    display: block !important;
}

::-webkit-input-placeholder {
    color: #ababab;
}
input:-webkit-autofill {
    -webkit-box-shadow: 0 0 0px 1000px #ffffff inset;
    -webkit-text-fill-color: #000000 !important;
}
/* ... */

